--- a/public/CSS/home.css
+++ b/public/CSS/home.css
@@ -334,7 +334,21 @@ height: 1400px
 #menu{
     display: none;
 }
+#botaofixo{
+    position: fixed;
+    margin-left: 1750px;
+    top: 900px;
+    width: 150px;;
+    height: 40px;;
+    background-color:green;
+    border-radius: 50px;
+    color: white;
+    border-color: green;
+    border-color: none; 
+    font-family: "Roboto";
+    
 
+}
 @media(max-width: 465px){
   #imagem{
       display: none;
