--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <button id="botaofixo"><b>Chat pra contato</b></button>
         <img src="/img/logo.png" alt="Agencia - devHouse" title="Agencia - devHouse" id="logo">
         <img src="/img/menu-icon.png" id="menu">
         <nav id="lista2">
