--- a/views/blog.html
+++ b/views/blog.html
@@ -59,6 +59,7 @@
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et optio eaque, eligendi, enim laboriosam dolorem minima veritatis quam dolor repellendus alias quibusdam, culpa aut animi. Dolores ipsa distinctio aperiam illum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim possimus velit perferendis cumque quia fuga, nemo tenetur facilis eum, impedit ab quibusdam repellendus voluptate voluptatem eius fugit magnam, vel qui.
         </p>
+        <div class="sc-fzoaKM gZrkUd track track-1" style="position: absolute; left: 0px; right: 0px;"></div>
     </main>
     
 </body>
