Aprendendo sobre ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
     <main>
         
         <nav id="Texto">
-            <b><p>Good design meets<br> great user experience</p></b>
+            <b><p><%= titulo %></p></b>
        </nav>
        <nav id="Texto2">
            <p><p>For everyone, from beginners to experts</p></p>
