--- a/views/depoimentos.ejs
+++ b/views/depoimentos.ejs
@@ -15,8 +15,8 @@
         depoimentos.forEach(depoimento => { %>
             <div>
             <h3><%= depoimento.titulo %></h3>
-            <p><%= depoimento.autor %></p>
-            <b><%= depoimento.descricao %></b>
+            <p><%= depoimento.descricao %></p>
+            <b><%= depoimento.autor %></b>
         </div>
         
          <% });  %> 
